--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -1,5 +1,5 @@
 @book{Hartshorne,
-  title={Algebraic geometry},
+  title={Algebraic {G}eometry},
   author={Hartshorne, Robin},
   volume={52},
   year={2013},
@@ -25,8 +25,8 @@
   year={1961}
 }
 
-@article{EGA3,
-  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {III}. {{\'E}tude} cohomologique des faisceaux coh{\'e}rents, premi{\`e}re partie},
+@article{EGA3-1,
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {III}. {{\'E}tude} cohomologique des faisceaux coh{\'e}rents, {Premi{\`e}re} partie},
   author={Grothendieck, Alexander},
   journal={Publications Math{\'e}matiques de l'IH{\'E}S},
   volume={11},
@@ -34,36 +34,85 @@
   year={1961}
 }
 
-@article{EGA4,
-     title = {{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {IV}. {{\'E}tude} locale des sch\'emas et des morphismes de sch\'emas, {Quatri\`eme} partie},
-     author = {Grothendieck, Alexander},
-     journal = {Publications Math\'ematiques de l'IH\'ES},
-     pages = {5--361},
-     publisher = {Institut des Hautes \'Etudes Scientifiques},
-     volume = {32},
-     year = {1967},
-     zbl = {0153.22301},
-     language = {fr}
+@article{EGA3-2,
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {III}. {{\'E}}tude cohomologique des faisceaux coh{\'e}rents, {Seconde} partie},
+  author={Grothendieck, Alexander},
+  journal={Publications Math{\'e}matiques de l'IH{\'E}S},
+  volume={17},
+  pages={5--91},
+  year={1963}
+}
+
+@article{EGA4-1,
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {IV}. {{\'E}}tude locale des sch{\'e}mas et des morphismes de sch{\'e}mas, {Premi{\`e}re} partie},
+  author={Grothendieck, Alexander},
+  journal={Publications Math{\'e}matiques de l'IH{\'E}S},
+  volume={20},
+  pages={5--259},
+  year={1964}
+}
+
+@article{EGA4-2,
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {IV}. {{\'E}}tude locale des sch{\'e}mas et des morphismes de sch{\'e}mas, {Seconde} partie},
+  author={Grothendieck, Alexander},
+  journal={Publications Math{\'e}matiques de l'IH{\'E}S},
+  volume={24},
+  pages={5--231},
+  year={1965}
+}
+
+@article{EGA4-3,
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {IV}. {{\'E}}tude locale des sch{\'e}mas et des morphismes de sch{\'e}mas, {Troisi{\`e}me} partie},
+  author={Grothendieck, Alexander},
+  journal={Publications Math{\'e}matiques de l'IH{\'E}S},
+  volume={28},
+  pages={5--255},
+  year={1966}
+}
+
+@article{EGA4-4,
+  title={{\'E}l{\'e}ments de g{\'e}om{\'e}trie alg{\'e}brique: {IV}. {{\'E}}tude locale des sch\'emas et des morphismes de sch\'emas, {Quatri\`eme} partie},
+  author={Grothendieck, Alexander},
+  journal={Publications Math\'ematiques de l'IH\'ES},
+  publisher={Institut des Hautes \'Etudes Scientifiques},
+  volume={32},
+  year={1967}
 }
 
 @book{SGA1,
-  title={Rev{\^e}tements {\'E}tales et Groupe Fondamental: S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois Marie 1960/61 (SGA 1)},
+  title={{R}ev{\^e}tements {\'E}tales et {G}roupe {F}ondamental: {S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois {M}arie 1960/61 ({SGA} 1)},
   author={Grothendieck, Alexander and Raynaud, Michele},
   volume={224},
   year={2006},
   publisher={Springer}
 }
 
+@book{SGA3-1,
+  title={Sch{\'e}mas en {G}roupes. {S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois {M}arie 1962/64 ({SGA} 3) {I}: {Proprietes Generales des Schemas en Groupes}},
+  author={Demazure, Michel and Gabriel, Pierre},
+  volume={151},
+  year={1970},
+  publisher={Institut des Hautes \'Etudes Scientifiques}
+}
 
-@book{SGA3,
-  title={Sch{\'e}mas en groupes I--III},
-  author={Grothendieck, Alexandre and Demazure, Michel},
-  year={1963},
-  publisher={Institut des Hautes Etudes Scientifiques}
+@book{SGA3-2,
+  title={Sch{\'e}mas en {G}roupes. {S}{\'e}minaire de G{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois {M}arie 1962/64 ({SGA} 3) {II}: {G}roupes de {T}ype {M}ultiplicatif, et {S}tructure des {S}ch{\'e}mas en {G}roupes {G}eneraux},
+  author={Raynaud, Michele and Artin, Michael and Grothendieck, Alexander and Serre, Jean-Pierre},
+  volume={152},
+  year={1970},
+  publisher={Institut des Hautes \'Etudes Scientifiques}
+}
+
+@book{SGA3-3,
+  title={Sch{\'e}mas en {G}roupes. {S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois {M}arie 1962/64 ({SGA} 3) {III}: {S}tructure des Sch{\'e}mas en {G}roupes {R}eductifs},
+  author={Demazure, Michel},
+  volume={153},
+  year={1970},
+  publisher={Institut des Hautes \'Etudes Scientifiques}
 }
 
 @book{SGA4-1,
-  title={Th{\'e}orie des Topos et Cohomologie Etale des Sch{\'e}mas. S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie 1963-1964 (SGA 4): Tome 1},
+  title={{T}h{\'e}orie des {T}opos et {C}ohomologie {\'E}tale des {S}ch{\'e}mas. {S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois-{M}arie 1963-1964 ({SGA} 4): {T}ome 1},
   author={Artin, Michael and Grothendieck, Alexandre and Verdier, Jean Louis},
   series={Lecture Notes in Mathematics},
   year={2006},
@@ -71,7 +120,7 @@
 }
 
 @book{SGA4-2,
-  title={Th{\'e}orie des Topos et Cohomologie Etale des Sch{\'e}mas. S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie 1963-1964 (SGA 4): Tome 2},
+  title={{T}h{\'e}orie des {T}opos et {C}ohomologie {\'E}tale des {S}ch{\'e}mas. {S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois-{M}arie 1963-1964 ({SGA} 4): {T}ome 2},
   author={Artin, Michael and Grothendieck, Alexandre and Verdier, Jean Louis},
   series={Lecture Notes in Mathematics},
   year={2006},
@@ -79,7 +128,7 @@
 }
 
 @book{SGA4-3,
-  title={Th{\'e}orie des Topos et Cohomologie Etale des Sch{\'e}mas. S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie 1963-1964 (SGA 4): Tome 3},
+  title={{T}h{\'e}orie des {T}opos et {C}ohomologie {\'E}tale des {S}ch{\'e}mas. {S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois-{M}arie 1963-1964 ({SGA} 4): {T}ome 3},
   author={Artin, Michael and Grothendieck, Alexandre and Verdier, Jean Louis},
   series={Lecture Notes in Mathematics},
   year={2006},
@@ -87,15 +136,21 @@
 }
 
 @book{Bourbaki_Topo1-4,
-  title={General Topology: Chapters 1-4},
+  title={General {T}opology: {C}hapters 1--4},
   author={Bourbaki, Nicolas},
-  volume={18},
-  year={2013},
-  publisher={Springer Science \& Business Media}
+  year={1995},
+  publisher={Springer Berlin, Heidelberg}
+}
+
+@article{Bourbaki_Topo5-10,
+  title={General topology {C}hapters 5--10},
+  author={Bourbaki, Nicolas},
+  year={1989},
+  publisher={Springer Berlin, Heidelberg}
 }
 
 @book{Bourbaki_LieI,
-  title={Lie Groups and Lie Algebras: Chapters 1-3},
+  title={Lie {G}roups and {L}ie {A}lgebras: {C}hapters 1-3},
   author={Bourbaki, Nicolas},
   volume={1},
   year={1989},
@@ -103,7 +158,7 @@
 }
 
 @book{Bourbaki_LieII,
-  title={Lie Groups and Lie Algebras: Chapters 4-6},
+  title={Lie {G}roups and {L}ie {A}lgebras: {C}hapters 4-6},
   author={Bourbaki, Nicolas},
   volume={2},
   year={2002},
@@ -111,15 +166,30 @@
 }
 
 @book{Bourbaki_LieIII,
-  title={Lie groups and Lie Algebras: Chapters 7-9},
+  title={Lie groups and Lie {A}lgebras: {C}hapters 7-9},
   author={Bourbaki, Nicolas},
   volume={3},
   year={2008},
   publisher={Springer Science \& Business Media}
 }
 
+@book{Bourbaki_IntI,
+  title={Integration I},
+  author={Bourbaki, Nicolas},
+  year={2004},
+  volume={1},
+  publisher={Springer Berlin, Heidelberg}
+}
+@book{Bourbaki_IntII,
+  title={Integration II},
+  author={Bourbaki, Nicolas},
+  year={2004},
+  volume={1},
+  publisher={Springer}
+}
+
 @book{Bourbaki_AlgI,
-  title={Algebra I: Chapters 1-3},
+  title={Algebra I: {C}hapters 1-3},
   author={Bourbaki, Nicolas},
   volume={1},
   year={1998},
@@ -127,7 +197,7 @@
 }
 
 @book{Bourbaki_AlgII,
-  title={Algebra II: Chapters 4-7},
+  title={Algebra II: {C}hapters 4-7},
   author={Bourbaki, Nicolas},
   volume={2},
   year={2013},
@@ -135,7 +205,7 @@
 }
 
 @book{Bourbaki_Alg8,
-  title={Algebre: Chapitre 8. Modules et anneaux semi-simples},
+  title={Algebre: {C}hapitre 8. {M}odules et anneaux semi-simples},
   author={Bourbaki, Nicolas},
   year={1958},
   publisher={Hermann}
@@ -144,27 +214,27 @@
 @book{Bourbaki_Alg9,
 author = {Bourbaki, Nicolas},
 year = {2007},
-title = {Algèbre: Chapitre 9},
+title = {Algèbre: {C}hapitre 9},
 publisher={Springer Berlin, Heidelberg}
 
 }
 
 @book{Bourbaki_Alg10,
-  title={Algebre: Chapitre 10. Algebre homologique},
+  title={Algebre: {C}hapitre 10. {A}lgebre homologique},
   author={Bourbaki, Nicolas},
   year={2007},
   publisher={Springer Science \& Business Media}
 }
 
 @book{Bourbaki_CA1-7,
-  title={Commutative algebra: chapters 1-7},
+  title={Commutative algebra: {C}hapters 1-7},
   author={Bourbaki, Nicolas},
   year={1998},
   publisher={Springer Science \& Business Media}
 }
 
 @book{Bourbaki_CA8-9,
-  title={Alg{\`e}bre commutative: Chapitres 8 et 9},
+  title={Alg{\`e}bre commutative: {C}hapitres 8 et 9},
   author={Bourbaki, Nicolas},
   year={2006},
   publisher={Springer Berlin Heidelberg}
@@ -178,7 +248,7 @@ publisher={Springer Berlin, Heidelberg}
 }
 
 @book{kashiwara_SAC,
-  title={Categories and Sheaves},
+  title={{C}ategories and {S}heaves},
   author={Kashiwara, Masaki and Schapira, Pierre},
   series={Grundlehren der mathematischen Wissenschaften},
   year={2005},
@@ -186,7 +256,7 @@ publisher={Springer Berlin, Heidelberg}
 }
 
 @article{tohoku,
-  title={Sur quelques points d'alg{\`e}bre homologique, I},
+  title={{S}ur quelques points d'alg{\`e}bre homologique, {I}},
   author={Alexander Grothendieck},
   journal={Tohoku Mathematical Journal},
   year={1957},
@@ -195,7 +265,7 @@ publisher={Springer Berlin, Heidelberg}
 }
 
 @misc{Nitsure_rep_of_Hom,
-      title={Representability of Hom implies flatness}, 
+      title={{R}epresentability of {H}om implies flatness}, 
       author={Nitin Nitsure},
       year={2003},
       eprint={math/0308036},
@@ -203,7 +273,7 @@ publisher={Springer Berlin, Heidelberg}
 }
 
 @book{hotta_Dmodule,
-  title={D-modules, perverse sheaves, and representation theory},
+  title={{D}-modules, perverse sheaves, and representation theory},
   author={Hotta, Ryoshi and Tanisaki, Toshiyuki},
   volume={236},
   year={2007},
@@ -217,4 +287,20 @@ publisher={Springer Berlin, Heidelberg}
   number={294},
   pages={65},
   year={1964}
+}
+
+@article{Chevalley1958,
+  title={{C}lassification des groupes de {L}ie alg{\'e}briques: {S}{\'e}minaire {C. Chevalley}, 1956-1958},
+  author={Chevalley, Claude},
+  year={1958}
+}
+
+@article{TGA4,
+  title={{T}echniques de construction et th{\'e}oremes d'existence en {G}{\'e}om{\'e}trie {A}lg{\'e}brique. IV. Les {S}ch{\'e}mas de {H}ilbert},
+  author={Grothendieck, Alexander},
+  journal={S{\'e}minaire Bourbaki},
+  volume={6},
+  number={221},
+  pages={249--276},
+  year={1960}
 }
