--- a/documentpre.tex
+++ b/documentpre.tex
@@ -106,11 +106,11 @@ root-radius=.06cm]{dynkin-diagrams}
 %---控制enumerate编号正体
 \usepackage{enumitem}
 \setlist[enumerate,1]{font=\upshape}
-
+\setlist[enumerate,2]{font=\upshape}
 
 \makeatletter%define roman numbers
-\newcommand{\rmnum}[1]{\romannumeral #1}
-\newcommand{\Rmnum}[1]{\expandafter\@slowromancap\romannumeral #1@}
+\newcommand{\rmnum}[1]{\textup{\romannumeral #1}}
+\newcommand{\Rmnum}[1]{\textup{\expandafter\@slowromancap\romannumeral #1@}}
 \makeatother
 
 \chapterfont{\centering}%chapter居中
@@ -146,7 +146,7 @@ root-radius=.06cm]{dynkin-diagrams}
 \DeclareSymbolFont{mathx}{U}{mathx}{m}{n}
 \DeclareFontSubstitution{U}{mathx}{m}{n}
 \DeclareMathAccent{\widecheck}{0}{mathx}{"71}
-\DeclareMathAccent{\widebar}{0}{mathx}{"73}
+%\DeclareMathAccent{\widebar}{0}{mathx}{"73}
 %------------------------------------------------
 
 
@@ -345,6 +345,11 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\ord{\mathrm{ord}}
 \def\Nil{\mathrm{Nil}}
 \def\Lie{\mathrm{Lie}}
+\def\Trans{\mathrm{Trans}}
+\def\STrans{\mathrm{STrans}}
+\def\Centr{\mathrm{Centr}}
+\def\Card{\mathrm{Card}}
+\def\pro{\mathrm{pro}}
 %-----------------------------
 
 %-----------------------------mathbf定义
@@ -356,9 +361,11 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\Grp{\mathbf{Grp}}
 \def\Set{\mathbf{Set}}
 \def\Sch{\mathbf{Sch}}
+\def\Rsp{\mathbf{Rsp}}
 \def\Alg{\mathbf{Alg}}
 \def\Top{\mathbf{Top}}
 \def\Cat{\mathbf{Cat}}
+\def\FEt{\textup{\textbf{F\'Et}}}
 
 %------------------operatorname定义
 \def\ker{\operatorname{ker}}
@@ -377,6 +384,7 @@ root-radius=.06cm]{dynkin-diagrams}
 \def\fppf{\textup{fppf}}
 \def\desc{\textup{desc}}
 \def\comp{\textup{comp}}
+\def\perf{\textup{perf}}
 \def\dash{\textup{-}}
 %--------------------其他定义
 \def\sub{\subseteq}
@@ -428,8 +436,76 @@ root-radius=.06cm]{dynkin-diagrams}
 
 
 %--------------------------------------------------------
-%定义widecheck
-
+%定义widebar
+\makeatletter
+\let\save@mathaccent\mathaccent
+\newcommand*\if@single[3]{%
+  \setbox0\hbox{${\mathaccent"0362{#1}}^H$}%
+  \setbox2\hbox{${\mathaccent"0362{\kern0pt#1}}^H$}%
+  \ifdim\ht0=\ht2 #3\else #2\fi
+  }
+%The bar will be moved to the right by a half of \macc@kerna, which is computed by amsmath:
+\newcommand*\rel@kern[1]{\kern#1\dimexpr\macc@kerna}
+%If there's a superscript following the bar, then no negative kern may follow the bar;
+%an additional {} makes sure that the superscript is high enough in this case:
+\newcommand*\widebar[1]{\@ifnextchar^{{\wide@bar{#1}{0}}}{\wide@bar{#1}{1}}}
+%Use a separate algorithm for single symbols:
+\newcommand*\wide@bar[2]{\if@single{#1}{\wide@bar@{#1}{#2}{1}}{\wide@bar@{#1}{#2}{2}}}
+\newcommand*\wide@bar@[3]{%
+  \begingroup
+  \def\mathaccent##1##2{%
+%Enable nesting of accents:
+    \let\mathaccent\save@mathaccent
+%If there's more than a single symbol, use the first character instead (see below):
+    \if#32 \let\macc@nucleus\first@char \fi
+%Determine the italic correction:
+    \setbox\z@\hbox{$\macc@style{\macc@nucleus}_{}$}%
+    \setbox\tw@\hbox{$\macc@style{\macc@nucleus}{}_{}$}%
+    \dimen@\wd\tw@
+    \advance\dimen@-\wd\z@
+%Now \dimen@ is the italic correction of the symbol.
+    \divide\dimen@ 3
+    \@tempdima\wd\tw@
+    \advance\@tempdima-\scriptspace
+%Now \@tempdima is the width of the symbol.
+    \divide\@tempdima 10
+    \advance\dimen@-\@tempdima
+%Now \dimen@ = (italic correction / 3) - (Breite / 10)
+    \ifdim\dimen@>\z@ \dimen@0pt\fi
+%The bar will be shortened in the case \dimen@<0 !
+    \rel@kern{0.6}\kern-\dimen@
+    \if#31
+      \overline{\rel@kern{-0.6}\kern\dimen@\macc@nucleus\rel@kern{0.4}\kern\dimen@}%
+      \advance\dimen@0.4\dimexpr\macc@kerna
+%Place the combined final kern (-\dimen@) if it is >0 or if a superscript follows:
+      \let\final@kern#2%
+      \ifdim\dimen@<\z@ \let\final@kern1\fi
+      \if\final@kern1 \kern-\dimen@\fi
+    \else
+      \overline{\rel@kern{-0.6}\kern\dimen@#1}%
+    \fi
+  }%
+  \macc@depth\@ne
+  \let\math@bgroup\@empty \let\math@egroup\macc@set@skewchar
+  \mathsurround\z@ \frozen@everymath{\mathgroup\macc@group\relax}%
+  \macc@set@skewchar\relax
+  \let\mathaccentV\macc@nested@a
+%The following initialises \macc@kerna and calls \mathaccent:
+  \if#31
+    \macc@nested@a\relax111{#1}%
+  \else
+%If the argument consists of more than one symbol, and if the first token is
+%a letter, use that letter for the computations:
+    \def\gobble@till@marker##1\endmarker{}%
+    \futurelet\first@char\gobble@till@marker#1\endmarker
+    \ifcat\noexpand\first@char A\else
+      \def\first@char{}%
+    \fi
+    \macc@nested@a\relax111{\first@char}%
+  \fi
+  \endgroup
+}
+\makeatother
 
 %---------------------------------------------------------
 \ExplSyntaxOn%defining shuffle prodcut
