--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -188,6 +188,13 @@
   publisher={Springer}
 }
 
+@book{Bourbaki_Spectral,
+  title={Th{\'e}ories spectrales: Chapitres 1 et 2},
+  author={Bourbaki, Nicolas},
+  year={2019},
+  publisher={Springer}
+}
+
 @book{Bourbaki_AlgI,
   title={Algebra I: {C}hapters 1-3},
   author={Bourbaki, Nicolas},
@@ -295,6 +302,12 @@ publisher={Springer Berlin, Heidelberg}
   year={1958}
 }
 
+@book{Chevalley_Classification,
+   title={Classification des Groupes Algebriques Semi-simples. Collected Works of Claude Chevalley},
+   author={Claude Chevalley},
+   publisher={Springer, Berlin}
+}
+
 @article{TGA4,
   title={{T}echniques de construction et th{\'e}oremes d'existence en {G}{\'e}om{\'e}trie {A}lg{\'e}brique. IV. Les {S}ch{\'e}mas de {H}ilbert},
   author={Grothendieck, Alexander},
@@ -303,4 +316,111 @@ publisher={Springer Berlin, Heidelberg}
   number={221},
   pages={249--276},
   year={1960}
+}
+
+@article{Lang1956,
+  title={Algebraic groups over finite fields},
+  author={Lang, Serge},
+  journal={American Journal of Mathematics},
+  volume={78},
+  number={3},
+  pages={555--563},
+  year={1956},
+  publisher={JSTOR}
+}
+
+@article{Rosenlicht1963,
+  title={Questions of rationality for solvable algebraic groups over nonperfect fields},
+  author={Rosenlicht, Maxwell},
+  journal={Annali di Matematica Pura ed Applicata, Series 4},
+  volume={62},
+  number={1},
+  pages={97--120},
+  year={1963},
+  publisher={Springer}
+}
+
+@misc{Brion2021,
+      title={Homogeneous varieties under split solvable algebraic groups}, 
+      author={Michel Brion},
+      year={2021},
+      eprint={2101.12452},
+      archivePrefix={arXiv},
+      primaryClass={math.AG}
+}
+
+@book{DG,
+  title={Groupes alg{\'e}briques. {T}ome I. {G}{\'e}om{\'e}trie alg{\'e}brique g{\'e}n{\'e}ralit{\'e}s. {G}roupes commutatifs},
+  author={Demazure, Michel and Gabriel, Pierre},
+  year={1970},
+  publisher={North-Holland}
+}
+
+@book{Serre_CG,
+  title={Galois cohomology},
+  author={Serre, Jean-Pierre and Serre, Jean-Pierre},
+  year={1979},
+  publisher={Springer}
+}
+
+@article{TDTE_I,
+  title={Technique de descente et th{\'e}or{\`e}mes d'existence en g{\'e}om{\'e}trie alg{\'e}brique. {I}. {G}{\'e}n{\'e}ralit{\'e}s. {D}escente par morphismes fid{\`e}lement plats},
+  author={Grothendieck, Alexander},
+  journal={S{\'e}minaire Bourbaki},
+  volume={5},
+  pages={299--327},
+  year={1959},
+  publisher={Soci{\'e}t{\'e} Math{\'e}matique de France}
+}
+
+@article{TDTE_II,
+  title={Technique de descente et th{\'e}oremes d'existence en g{\'e}om{\'e}trie alg{\'e}brique. {II}. {L}e th{\'e}oreme d'existence en th{\'e}orie formelle des modules},
+  author={Grothendieck, Alexander},
+  journal={S{\'e}minaire Bourbaki},
+  volume={5},
+  pages={369--390},
+  year={1960},
+  publisher={Soci{\'e}t{\'e} Math{\'e}matique de France}
+}
+
+@article{TDTE_III,
+    title={Techniques de construction et th{\'}eor{\'e}mes d'existence en g{\'}eom{\'}etrie alg{\'}ebrique. {III}. {P}r{\'e}sch{\'e}mas quotients}, 
+    author={Grothendieck, Alexander},
+    journal={S{\'e}minaire Bourbaki},
+    publisher={Soci{\'}et{\'}e math{\'e}matique de France},
+    volume={6},
+    pages={205--222},
+    year={1961},
+}
+
+@article{TDTE_IV,
+    title={Techniques de construction et th\'eor\`emes d'existence en g\'eom\'etrie alg\'ebrique {IV} : les sch\'emas de {H}ilbert},
+    author={Grothendieck, Alexander},
+    pages={205-222},
+    journal={S{\'e}minaire Bourbaki},
+    publisher={Soci{\'}et{\'}e math{\'e}matique de France},
+    number={6},
+    year={1961},
+}
+
+@article{TDTE_V,
+  title={Technique de descente et th{\'e}oremes d'existence en g{\'e}om{\'e}trie alg{\'e}brique. {V}. {L}es sch{\'e}mas de {P}icard: th{\'e}oremes d'existence},
+  author={Grothendieck, Alexander},
+  journal={S{\'e}minaire Bourbaki},
+  volume={7},
+  number={232},
+  pages={143--161},
+  year={1961},
+  publisher={Soci{\'e}t{\'e} Math{\'e}matique de France}
+}
+
+@article{TDTE_VI,
+  title={Technique de descente et th{\'e}oremes d'existence en g{\'e}om{\'e}trie alg{\'e}brique. {VI}. {L}es sch{\'e}mas de {P}icard: propri{\'e}t{\'e}s g{\'e}n{\'e}rales},
+  author={Grothendieck, Alexander},
+  journal={S{\'e}minaire Bourbaki},
+  volume={7},
+  number={236},
+  pages={221--243},
+  year={1961},
+  publisher={Soci{\'e}t{\'e} Math{\'e}matique de France}
 }
