--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -135,6 +135,22 @@
   publisher={Springer}
 }
 
+@article{SGA4.5,
+  title={S{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois {M}arie-{C}ohomologie {\'e}tale-({SGA} 4 1/2)},
+  author={Deligne, P and Grothendieck, A and Illusie, L and Verdier, JL},
+  year={1977},
+  volume={569},
+  publisher={Springer, Berlin; New York}
+}
+
+@article{SGA5,
+  title={Cohomologie {$\ell$}-adique et fonctions {$L$}},
+  author={Grothendieck, Alexander},
+  journal={{S}{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois-{M}arie 1965-66},
+  year={1977},
+  publisher={Springer-Verlag}
+}
+
 @book{Bourbaki_Topo1-4,
   title={General {T}opology: {C}hapters 1--4},
   author={Bourbaki, Nicolas},
@@ -358,7 +374,7 @@ publisher={Springer Berlin, Heidelberg}
 
 @book{Serre_CG,
   title={Galois cohomology},
-  author={Serre, Jean-Pierre and Serre, Jean-Pierre},
+  author={Serre, Jean-Pierre},
   year={1979},
   publisher={Springer}
 }
@@ -384,10 +400,10 @@ publisher={Springer Berlin, Heidelberg}
 }
 
 @article{TDTE_III,
-    title={Techniques de construction et th{\'}eor{\'e}mes d'existence en g{\'}eom{\'}etrie alg{\'}ebrique. {III}. {P}r{\'e}sch{\'e}mas quotients}, 
+    title={Techniques de construction et th{\'e}or{\'e}mes d'existence en g{\'e}om{\'e}trie alg{\'e}brique. {III}. {P}r{\'e}sch{\'e}mas quotients}, 
     author={Grothendieck, Alexander},
     journal={S{\'e}minaire Bourbaki},
-    publisher={Soci{\'}et{\'}e math{\'e}matique de France},
+    publisher={Soci{\'e}t{\'e} math{\'e}matique de France},
     volume={6},
     pages={205--222},
     year={1961},
@@ -398,7 +414,7 @@ publisher={Springer Berlin, Heidelberg}
     author={Grothendieck, Alexander},
     pages={205-222},
     journal={S{\'e}minaire Bourbaki},
-    publisher={Soci{\'}et{\'}e math{\'e}matique de France},
+    publisher={Soci{\'e}t{\'e} math{\'e}matique de France},
     number={6},
     year={1961},
 }
@@ -423,4 +439,71 @@ publisher={Springer Berlin, Heidelberg}
   pages={221--243},
   year={1961},
   publisher={Soci{\'e}t{\'e} Math{\'e}matique de France}
+}
+
+@article{Ka-La1985,
+  author={Katz, Nicholas M. and Laumon, G\'erard},
+  title={Transformation de {Fourier} et majoration de sommes exponentielles},
+  journal={Publications Math\'ematiques de l'IH\'ES},
+  pages={145--202},
+  publisher={Institut des Hautes \'Etudes Scientifiques},
+  volume={62},
+  year={1985},
+}
+
+@article{Laumon1987,
+  author={Laumon, G\'erard},
+  title={Transformation de {Fourier}, constantes d'\'equations fonctionnelles et conjecture de {Weil}},
+  journal={Publications Math\'ematiques de l'IH\'ES},
+  pages={131--210},
+  publisher={Institut des Hautes \'Etudes Scientifiques},
+  volume={65},
+  year={1987},
+}
+
+@article{BBD,
+  title={Faisceaux pervers},
+  author={Beilinson, Alexander and Bernstein, Joseph and Deligne, Pierre},
+  journal={Ast{\'e}risque},
+  volume={100},
+  number={1},
+  year={1982}
+}
+
+@article{MPMG_PoincareDuality,
+  title={La dualit{\'e} de Poincar{\'e} pour les espaces singuliers},
+  author={Goresky, Mark and MacPherson, Robert},
+  journal={CR Acad. Sci.},
+  volume={284},
+  pages={1549--1551},
+  year={1977}
+}
+
+@article{MPMG_ICT,
+  title={Intersection homology theory},
+  author={Goresky, Mark and MacPherson, Robert},
+  journal={Topology},
+  volume={19},
+  number={2},
+  pages={135--162},
+  year={1980},
+  publisher={Elsevier}
+}
+
+@article{Deligne_WeilII,
+  author={Deligne, Pierre},
+  title={La conjecture de {Weil}: {II}},
+  journal={Publications Math\'ematiques de l'IH\'ES},
+  pages={137--252},
+  publisher={Institut des Hautes \'Etudes Scientifiques},
+  volume={52},
+  year={1980},
+}
+
+@book{FK,
+  title={Etale cohomology and the {W}eil conjecture},
+  author={Freitag, Eberhard and Kiehl, Reinhardt},
+  volume={13},
+  year={2013},
+  publisher={Springer Science \& Business Media}
 }
