--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -20,6 +20,7 @@
 \allowdisplaybreaks
 \raggedbottom
 \special{xdvipdfmx:config z0}
+\addbibresource{Bibtex.bib}
 
 \title{Algebra}
 \author{Xiaolong Pan}
@@ -54,19 +55,17 @@ Algebra\\}
 
 %\include{chapter/topo}
 %\include{chapter/ring}
-%\include{chapter/Field}
+\include{chapter/Field}
 %\include{chapter/commutative-algebra}
 %\include{chapter/Lie-alg-grp}
-\include{chapter/category}
+%\include{chapter/category}
 %\include{chapter/inf-category}
 %\include{chapter/sheaf}
 %\include{chapter/scheme}
 %\include{chapter/topos-cohomology}
 %\include{chapter/group-scheme}
 
-%\bibliographystyle{abbrv}
-%\bibliographystyle{alpha}
-%\bibliography{Bibtex} 
+\printbibliography
 
 \end{document}
 
