--- a/Bibtex.bib
+++ b/Bibtex.bib
@@ -135,12 +135,14 @@
   publisher={Springer}
 }
 
-@article{SGA4.5,
-  title={S{\'e}minaire de {G}{\'e}om{\'e}trie {A}lg{\'e}brique du {B}ois {M}arie-{C}ohomologie {\'e}tale-({SGA} 4 1/2)},
-  author={Deligne, P and Grothendieck, A and Illusie, L and Verdier, JL},
-  year={1977},
-  volume={569},
-  publisher={Springer, Berlin; New York}
+@book{SGA4.5,
+	title={Cohomologie Etale: S{\'e}minaire de G{\'e}om{\'e}trie Alg{\'e}brique du Bois-Marie {SGA} 4 1/2},
+	volume = {569},
+	isbn = {978-3-540-08066-4 978-3-540-37507-4},
+	series = {Lecture Notes in Mathematics},
+	publisher = {Springer},
+	author = {Deligne, Pierre},
+	date = {1977},
 }
 
 @article{SGA5,
